view: Resolve and supress deprecations where applicable
Signed-off-by: Aayush Gupta <aayushgupta219@gmail.com>